test/ui/test/name-resolution/invalid-literals.stderr
error[E043]: the number literal is not a valid constructor for type ‘Void’
  ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:3:13
  │
3 │ numv: Nat = Void.234
  │             ──── the data type
  │
  ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:3:18
  │
3 │ numv: Nat = Void.234
  │                  ═══ number literal may not construct that type
  │

error[E043]: the number literal is not a valid constructor for type ‘Text’
  ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:5:14
  │
5 │ numt: Text = Text.2001
  │              ──── the data type
  │
  ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:5:19
  │
5 │ numt: Text = Text.2001
  │                   ════ number literal may not construct that type
  │

error: binding ‘local’ is not a data type
  ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:8:18
  │
8 │ local-lit: Nat = local.23
  │                  ═════ a function
  │
  ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:8:24
  │
8 │ local-lit: Nat = local.23
  │                        ── literal requires a data type as its namespace
  │

error[E007]: number literal ‘-1’ does not fit type ‘Nat’
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:10:29
   │
10 │ negative-default-nat: Nat = -1
   │                             ══
   │
  note: values of this type must fit integer interval [0, infinity)

error[E007]: number literal ‘-1702’ does not fit type ‘Nat’
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:11:25
   │
11 │ negative-nat: Nat = Nat.-1'702
   │                         ══════
   │
  note: values of this type must fit integer interval [0, infinity)

error[E007]: number literal ‘1000000000000’ does not fit type ‘Int32’
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:13:30
   │
13 │ out-of-bounds: Int32 = Int32.1'000'000'000'000
   │                              ═════════════════
   │
  note: values of this type must fit integer interval [-2^31, 2^31-1]

error[E043]: the text literal is not a valid constructor for type ‘Nat’
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:15:13
   │
15 │ tnat: Nat = Nat."0"
   │             ─── the data type
   │
   ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:15:17
   │
15 │ tnat: Nat = Nat."0"
   │                 ═══ text literal may not construct that type
   │

error[E043]: the text literal is not a valid constructor for type ‘Void’
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:17:15
   │
17 │ tvoid: Void = Void."  "
   │               ──── the data type
   │
   ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:17:20
   │
17 │ tvoid: Void = Void."  "
   │                    ════ text literal may not construct that type
   │

error: binding ‘thing’ is not a data type
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:19:18
   │
19 │ mod-lit: Int32 = thing.0
   │                  ═════ a module
   │
   ├─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:19:24
   │
19 │ mod-lit: Int32 = thing.0
   │                        ─ literal requires a data type as its namespace
   │

error[E021]: the binding ‘param’ is not defined in this scope
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:21:40
   │
21 │ param-pass-lit (param: Int32): Int32 = param.""
   │                                        ═════
   │

error[E021]: the binding ‘undefined’ is not defined in this scope
   ┌─ ${TEST_FOLDER}/name-resolution/invalid-literals.lushui:23:15
   │
23 │ undef: Void = undefined."SCARY"
   │               ═════════
   │

error: aborting due to 11 previous errors

